# datarobot-mcp-template

./: .Taskfile.template  .env.sample  .gitignore  CHANGELOG.md  README.md  Taskfile.yaml
.datarobot/cli/: base.yml  dr_mcp.yaml  versions.yaml
.github/workflows/: dr-mcp-server-lib-test.yml  dr_mcp-test.yml
.internal/: README.md
.internal/dr-mcp-server-lib/: .gitignore  MANIFEST.in  Taskfile.yaml  pyproject.toml  pytest.ini  server.py
.internal/dr-mcp-server-lib/base/: __init__.py
.internal/dr-mcp-server-lib/base/core/: common.py  config.py  config_utils.py  credentials.py  dr_mcp_server.py  logging.py  mcp_instance.py  memory_management.py  routes.py  telemetry.py  tool_filter.py  utils.py
.internal/dr-mcp-server-lib/base/core/dynamic_tools/: register.py  schema.py
.internal/dr-mcp-server-lib/base/core/dynamic_tools/deployment/: config.py  controllers.py  metadata.py  register.py
.internal/dr-mcp-server-lib/base/core/dynamic_tools/deployment/adapters/: base.py  default.py  drum.py
.internal/dr-mcp-server-lib/base/prompts/: deployment_info.py
.internal/dr-mcp-server-lib/base/resources/: config.py
.internal/dr-mcp-server-lib/base/tests/: README.md  conftest.py
.internal/dr-mcp-server-lib/base/tests/ete/: common.py  conftest.py  mcp_utils.py  openai_llm_mcp_client.py  test_data.py  test_deployment.py  test_deployment_info.py  test_model.py  test_predict.py  test_predict_realtime.py  test_projects.py  tool_base_ete.py
.internal/dr-mcp-server-lib/base/tests/integration/: integration_mcp_server.py  mcp_utils.py  test_config_resource.py  test_deployment_info.py  test_deployment_info_prompts.py  test_dynamic_tools.py  test_model.py  test_predict_realtime.py  test_register_tools.py
.internal/dr-mcp-server-lib/base/tests/unit/: conftest.py  test_config.py  test_data.py  test_deployment.py  test_deployment_info.py  test_model.py  test_predict.py  test_predict_realtime.py  test_project.py  test_register_tools.py  test_shared_common.py  test_shared_credentials.py  test_shared_dr_mcp_server.py  test_shared_telemetry.py  test_tagged_tools.py  test_training.py
.internal/dr-mcp-server-lib/base/tests/unit/dynamic_tools/: test_adapters.py  test_config.py  test_controllers.py  test_headers.py  test_metadata.py  test_register.py  test_schema.py  test_utils.py
.internal/dr-mcp-server-lib/base/tools/: data.py  deployment.py  deployment_info.py  model.py  predict.py  predict_realtime.py  project.py  training.py
.internal/dr-mcp-server-lib/base/tools/core/: mcp_server_tools.py
.internal/dr-mcp-server-lib/base/tools/core/memory_management/: memory.py
docs/: custom_tools.md  mcp_client_setup.md  mcp_server_architecture.md
dr_mcp/: .gitignore  AGENTS.md  README.md  Taskfile.yaml  dev.md  metadata.yaml  pyproject.toml  start-app.sh  test_interactive.py
dr_mcp/app/: main.py
dr_mcp/app/core/: server_lifecycle.py  user_config.py  user_credentials.py
dr_mcp/app/tools/: user_tools.py
infra/: .gitignore  Pulumi.yaml  Taskfile.yaml  pyproject.toml
infra/dev_tools/lineage/: entities.py  enums.py  pulumi_managers.py  utils.py
infra/docker/: start_server.sh
infra/infra/: __init__.py  dr_mcp.py  dr_mcp_user_params.py
infra/tests/: test_dr_mcp.py
infra/tests/units/: test_dr_mcp.py
infra/tests/units/dev_tools/lineage/: test_entities.py  test_enums.py  test_pulumi_managers.py  test_utils.py
